--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Recommend</title>
+    <script src="https://kit.fontawesome.com/b4775cc3ca.js" crossorigin="anonymous" async></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
