--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,8 @@
     -->
     <title>Recommend</title>
     <script src="https://kit.fontawesome.com/b4775cc3ca.js" crossorigin="anonymous" async></script>
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript" async></script>
+
 
   </head>
   <body>
